improve landing page content

--- a/index.html
+++ b/index.html
@@ -1,50 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Landing Page</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>Responsive Landing Page | Negin</title>
+
+  <!-- responsive -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!--  connect-CSS -->
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>My Awesome Product</h1>
-            <p>Clean, fast, and responsive solution</p>
-            <a href="#contact" class="btn">Get in Touch</a>
+
+  <!-- header / Hero -->
+  <header>
+    <div class="container">
+      <h1>Responsive Landing Page Design</h1>
+      <p>I design clean and mobile-friendly landing pages using HTML & CSS.</p>
+      <a href="#contact" class="btn">Hire Me</a>
+    </div>
+  </header>
+
+  <!-- features -->
+  <section>
+    <div class="container">
+      <h2>What You Get</h2>
+
+      <div class="feature-list">
+        <div class="feature">
+          <h3>Responsive Design</h3>
+          <p>Looks great on mobile, tablet, and desktop devices.</p>
         </div>
-    </header>
 
-    <section id="features" class="container">
-        <h2>Features</h2>
-        <div class="feature-list">
-            <div class="feature">
-                <h3>Fast</h3>
-                <p>Optimized for speed and efficiency</p>
-            </div>
-            <div class="feature">
-                <h3>Responsive</h3>
-                <p>Looks great on desktop and mobile</p>
-            </div>
-            <div class="feature">
-                <h3>Easy</h3>
-                <p>Simple and clean design</p>
-            </div>
+        <div class="feature">
+          <h3>Clean Code</h3>
+          <p>Well-structured HTML and CSS, easy to edit and maintain.</p>
         </div>
-    </section>
 
-    <section id="contact" class="container">
-        <h2>Contact Me</h2>
-        <form>
-            <input type="text" placeholder="Your Name" required>
-            <input type="email" placeholder="Your Email" required>
-            <textarea placeholder="Your Message" required></textarea>
-            <button type="submit">Send</button>
-        </form>
-    </section>
+        <div class="feature">
+          <h3>Fast Delivery</h3>
+          <p>Simple landing pages delivered quickly and efficiently.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <footer>
-        <p>© 2025 My Landing Page</p>
-    </footer>
+  <!-- contact -->
+  <section id="contact">
+    <div class="container">
+      <h2>Get in Touch</h2>
+
+      <form>
+        <input type="text" placeholder="Your Name" required>
+        <input type="email" placeholder="Your Email" required>
+        <textarea placeholder="Your Message"></textarea>
+        <button type="submit">Send Message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- footer -->
+  <footer>
+    <div class="container">
+      <p>© 2025 Negin | Frontend Developer – HTML & CSS</p>
+    </div>
+  </footer>
+
 </body>
 </html>
